fixed 3rd div on tablet view

--- a/module2-solution/css/style.css
+++ b/module2-solution/css/style.css
@@ -161,7 +161,4 @@ body {
     .col-md-12 {
         width: 100%;
     }
-    .menu-item-container.col-md-6:nth-child(3) {
-        width: 100%;
-    }
 }
